--- a/src/AfegirEstudiant.form
+++ b/src/AfegirEstudiant.form
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="AfegirEstudiant">
   <grid id="27dc6" binding="panel1" layout-manager="GridLayoutManager" row-count="3" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="0" left="0" bottom="0" right="0"/>
+    <margin top="30" left="30" bottom="30" right="30"/>
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
     </constraints>
-    <properties/>
+    <properties>
+      <font size="18" style="1"/>
+    </properties>
     <border type="none"/>
     <children>
       <component id="24e18" class="javax.swing.JLabel">
@@ -29,7 +31,7 @@
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Confirm"/>
+          <text value="Afegir"/>
         </properties>
       </component>
       <component id="ddb04" class="javax.swing.JButton" binding="cancelButton" default-binding="true">
@@ -37,7 +39,7 @@
           <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Cancel"/>
+          <text value="Següent ES"/>
         </properties>
       </component>
       <component id="b8ddc" class="javax.swing.JLabel">
